--- a/graphql-sandbox/package.json
+++ b/graphql-sandbox/package.json
@@ -12,6 +12,9 @@
     "typescript": "3.0.3"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.16.2",
     "pg": "^7.4.3",
