--- a/graphql-sandbox/package.json
+++ b/graphql-sandbox/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
+    "@types/jest": "^23.3.2",
     "@types/node": "^10.10.1",
     "@types/uuid": "^3.4.4",
     "gql2ts": "^1.9.0",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.2",
     "ts-node": "7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
@@ -16,6 +19,7 @@
     "bcrypt": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "graphql-import": "^0.7.1",
+    "graphql-request": "^1.8.2",
     "graphql-yoga": "^1.16.2",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
@@ -24,6 +28,7 @@
   },
   "scripts": {
     "start": " nodemon --exec ts-node src/index.ts",
-    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
+    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
+    "test": "jest"
   }
 }
