--- a/graphql-sandbox/package.json
+++ b/graphql-sandbox/package.json
@@ -27,8 +27,9 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": " nodemon --exec ts-node src/index.ts",
+    "start": "SET NODE_ENV=development&&nodemon --exec ts-node src/index.ts",
+    "test-server": "SET NODE_ENV=test&&ts-node src/index.ts",
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
-    "test": "jest"
+    "test": "SET NODE_ENV=test&&jest"
   }
 }
